# pixel

./: .env.local  AGENTS.md  README.md  about.html  app.py  architecture.html  demo.html  demo_ar_manager.py  demo_ar_specialist.py  demo_manager_recovery_intervention.py  demo_medical_necessity_recovery.py  demo_missing_documentation_recovery.py  demo_underpayment_recovery.py  demo_vp_revenue_cycle.py  index.html  pyproject.toml  site.js  styles.css  vercel.json
api/: acquisition.py  case.py  demo.py  health.py  index.py  summary.py
app/: __init__.py  main.py
asc_rcm_lite/: __init__.py  export.py  import_validation.py  ingestion.py  journeys.py  models.py  operations.py  persistence.py  personas.py  pipeline.py  revenue_recovery.py  work_objects.py  workqueue.py
clinical_ri_lite/: __init__.py  ingestion.py  pipeline.py
docs/: ASC_RCM_BUILD_PLAN.md  ASC_RCM_COPILOT_EXECUTION_PLAN.md  COMPLIANCE_GUARDRAILS.md  COPILOT_DEMO_SCRIPT.md  DATA_DICTIONARY.md  EVAL_RESULTS.md  PHASE2_ARCHITECTURE_ASSESSMENT.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_OPERATOR_OS_PLAN.md  PHASE4_HOLDCO_COMMAND_CENTER_PLAN.md  PHASE7_OPERATIONAL_CREDIBILITY_PLAN.md  PHASE8_REVENUE_RECOVERY_AUDIT.md  PRODUCT_SPEC.md  WORKFLOW_NATIVE_RESET_AUDIT.md
evals/: __init__.py  run_all.py  run_asc_copilot_eval.py  run_charges.py  run_coding.py  run_denials.py  run_eval.py  run_prebill.py  run_um.py
smarterdx_lite/: __init__.py  ingestion.py  models.py  pipeline.py
tests/: test_ar_copilot.py  test_coding_copilot.py  test_copilot.py  test_copilot_eval.py  test_denial_copilot.py  test_detectors.py  (+18 more)
(+111 files in other folders)
