[project]
name = "smarterdx-lite"
version = "0.1.0"
description = "Synthetic deterministic-first clinical revenue integrity copilot prototype."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

